[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menu_screen/level.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/ui/star.png" type="Texture" id=3]
[ext_resource path="res://images/ui/multiplayer.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Level" type="Control"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "1"

[node name="StarCount" type="Label" parent="."]
visible = false
margin_left = 60.3238
margin_top = 45.8263
margin_right = 69.3238
margin_bottom = 65.8263
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="StarIcon" type="TextureRect" parent="."]
visible = false
margin_left = 41.5289
margin_top = 46.8642
margin_right = 57.5289
margin_bottom = 62.8642
texture = ExtResource( 3 )
expand = true

[node name="Multiplayer" type="TextureRect" parent="."]
visible = false
margin_left = 40.9954
margin_top = -7.4537
margin_right = 66.9954
margin_bottom = 18.5463
texture = ExtResource( 4 )
expand = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
